# tap-snowflake

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  mypy.ini  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci_workflow.yml  release_workflow.yml
tap_snowflake/: __init__.py  client.py  tap.py
tap_snowflake/tests/: test_core.py
tests/: __init__.py  catalog-incremental.json  catalog.json  test_core.py
