[tool.poetry]
name = "meltanolabs-tap-snowflake"
version = "0.0.0"
description = "`tap-snowflake` is a Singer tap for Snowflake, built with the Meltano SDK for Singer Taps."
readme = "README.md"
authors = ["Meltano Team <hello@meltano.com>"]
keywords = [
    "ELT",
    "Snowflake",
]
license = "Apache 2.0"
packages = [
    { include = "tap_snowflake" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.12"
requests = "^2.25.1"
singer-sdk = "~=0.30.0"
snowflake-sqlalchemy = ">=1.4.7,!=1.7.2"
snowflake-connector-python = "^3.0.2"
sqlalchemy = "<2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.2"
isort = "^5.10.1"
mypy = "^0.991"
pydocstyle = "^6.1.1"
singer-sdk = {extras = ["testing"], version = "*"}
tox = "^3.24.4"
types-requests = "^2.26.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_snowflake"

[build-system]
requires = ["poetry-core>=1.0.8,<1.6", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
# CLI declaration
tap-snowflake = "tap_snowflake.tap:TapSnowflake.cli"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
