[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "meltanolabs-tap-snowflake"
dynamic = [ "version" ]
description = "Singer tap for Snowflake, built with the Meltano SDK for Singer Taps."
authors = [{ name = "Meltano Team", email = "hello@meltano.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "Meltano",
    "Snowflake",
]
dependencies = [
    "cryptography>=46",
    "singer-sdk~=0.53.6",
    "snowflake-sqlalchemy==1.9.0",
    "snowflake-connector-python[secure-local-storage]~=4.4.0",
    "sqlalchemy~=2.0.43",
]

[project.scripts]
tap-snowflake = "tap_snowflake.tap:TapSnowflake.cli"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "testing" },
]
lint = [
    "mypy>=1.19",
    "ruff~=0.15.0",
]
testing = [
    "singer-sdk[testing]",
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = ["tap_snowflake"]

[tool.hatch.build.targets.wheel]
include = ["tap_snowflake"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_snowflake"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
    "ANN001",
    "ANN401",
    "COM812",
    "S608",
    "SLF001",
    "EM101",
]
select = ["ALL"]

[tool.ruff.format]
quote-style = "double"
exclude = ["*.pyi"]

[tool.ruff.lint.isort]
known-first-party = ["target_snowflake"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
follow_untyped_imports = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
